@@ -7,6 +7,8 @@ bzr-svn 0.5.0~rc2				UNRELEASED
 
    * Fix some tests when running overall bzr testsuite. (#306158)
 
+   * Handle duplicate forward slashes in the path part of a URL. 
+
 bzr-svn 0.5.0~rc1			2008-12-08
 
   CHANGES
